# mime_guess2

./: Cargo.toml  README.md  build.rs
benches/: benchmark.rs
examples/: rev_map.rs
src/: impl_bin_search.rs  impl_phf.rs  lib.rs  mime_types.rs
